# ClinicManager

./: CMakeLists.txt  databasehandler.cpp  databasehandler.h  databasehelper.cpp  databasehelper.h  main.cpp  main.qml
